Customize site config content

--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ sales_manager:
   email: jeff.kuryak@austintexas.gov
   phone: 5124044042
 catering_manager:
-  name: Kerry Craig
-  email: kcraig@levyrestaurants.com
-  phone: 5124044137
+  name: Jessica Birdwell
+  email: jbirdwell@levyrestaurants.com
+  phone: 5124044147
 it_coordinator:
   name: Crystal Rivera
   email: crystal.rivera@austintexas.gov
