--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ sales_manager:
   email: jeff.kuryak@austintexas.gov
   phone: 5124044042
 catering_manager:
-  name: Jessica Birdwell
-  email: jbirdwell@levyrestaurants.com
-  phone: 5124044147
+  name: Dawn Mosley
+  email: dmosely@levyrestaurants.com 
+  phone: 5124044254
 it_coordinator:
   name: Crystal Rivera
   email: crystal.rivera@austintexas.gov
