Customize site config content

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Informa Build Show LIVE 2024"
+title: "Build Show LIVE"
 description: Your one-stop shop for planning your event at the Austin Convention Center
 url: //informa-build-show-live-2024.austinconventioncenter.com
 start_date: 2024-11-07
